feat: complete Student Networking CRM implementation
- Hunter API integration for email discovery with confidence scoring
- AI-powered personalization engine using OpenAI
- Gmail draft creation with RFC 2822 email building
- Sent email detection via Gmail API sync
- Workflow dashboard with progress tracking
- Rate limiting on all external API endpoints
- Comprehensive test coverage (133 tests)

Security improvements:
- Added rate limiting to Hunter, OpenAI, and Gmail API routes
- Authorization checks on all contact operations
- Input validation with Zod schemas

OAuth:
- Added gmail.compose scope for draft creation

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@
 
 DATABASE_URL="mongodb+srv://<username>:<password>@cluster0.jzcxjog.mongodb.net/nextcrm-app"
 
+# OpenAI API Key for AI-powered personalization features
+OPENAI_API_KEY="sk-..."
+
+# Hunter.io API Key for Email Finder
+# Get your API key at https://hunter.io/api
+HUNTER_API_KEY="your-hunter-api-key"
