--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "seed": "ts-node ./prisma/seeds/seed.ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
     "@aws-sdk/client-s3": "^3.689.0",
     "@aws-sdk/s3-request-presigner": "^3.689.0",
     "@aws-sdk/signature-v4-crt": "^3.687.0",
