feat: complete Phase 0 + Phase 1 of UI rebuild
Phase 0 (scaffolding):
- Route groups: /login, /home, /sheets, /settings
- Global enums (ConnectionStage, AiMode, CampaignRunState, etc.)
- Integration stubs (search, pageFetcher, gmail, hunter)
- Action system stubs (types, executor, campaignRunner)
- src/ui/ folder structure with barrel exports

Phase 1 (data model + core):
- Prisma schema: 8 new models (Campaign, CampaignRun, Settings,
  Template, SavedView, CustomFieldDefinition, IntegrationConnection,
  StagedContactList) + crm_Contacts updates
- CRUD APIs: campaigns, settings, templates, saved-views,
  custom-fields, integrations
- Auth middleware for protected routes
- App shell UI: Sidebar, TopBar, ModeSwitch, AppShell layout
- Settings page with Integrations, Templates, Automation sections
- Search provider (SerpAPI) fully implemented
- Action system: 14 Zod payload schemas, validateActionPayload,
  enum reconciliation with central lib/types/enums.ts

209+ tests passing across all agents.

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/bcrypt": "^5.0.2",
@@ -111,6 +112,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/coverage-v8": "^4.0.18",
     "cypress": "^13.15.2",
     "jsdom": "^27.4.0",
     "prisma": "^5.22.0",
