chore: add SERPAPI_API_KEY to env example

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ OPENAI_API_KEY="sk-..."
 # Hunter.io API Key for Email Finder
 # Get your API key at https://hunter.io/api
 HUNTER_API_KEY="your-hunter-api-key"
+
+# SerpAPI Key for Contact Search
+# Get your API key at https://serpapi.com/
+SERPAPI_API_KEY="your-serpapi-api-key"
