--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "next-themes": "^0.4.3",
     "nodemailer": "^6.9.16",
     "openai": "^4.71.1",
+    "papaparse": "^5.5.3",
     "postcss": "^8.4.49",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
@@ -94,6 +95,7 @@
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.3.0",
+    "xlsx": "^0.18.5",
     "xmlbuilder2": "^3.1.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
@@ -109,6 +111,7 @@
     "@types/mailparser": "^3.4.5",
     "@types/node": "^22.9.0",
     "@types/nodemailer": "^6.4.16",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
